--- a/app.yaml
+++ b/app.yaml
@@ -18,6 +18,7 @@ handlers:
 
 - url: /stats.*
   script: google.appengine.ext.appstats.ui.app
+  login: admin
 
 - url: /_ah/mail/.+
   script: main.application
