cleanup init(), disable extraneous app.yaml features

--- a/app.yaml
+++ b/app.yaml
@@ -4,16 +4,16 @@ runtime: go123
 # https://cloud.google.com/appengine/docs/standard/reference/app-yaml?tab=go#runtime_and_app_elements
 app_engine_apis: on
 
-builtins:
-# Enable '/_ah/stats'
-- appstats: on
-# Redirect `/_ah/admin` to Cloud Console
-- admin_redirect: on
-#- remote_api: on
+# builtins:
+# # Enable '/_ah/stats'
+# - appstats: on
+# # Redirect `/_ah/admin` to Cloud Console
+# - admin_redirect: on
+# #- remote_api: on
 
-# https://cloud.google.com/appengine/docs/standard/services/overview?tab=go
-inbound_services:
-- mail
+# # https://cloud.google.com/appengine/docs/standard/services/overview?tab=go
+# inbound_services:
+# - mail
 
 handlers:
 - url: /favicon\.ico
