--- a/app.yaml
+++ b/app.yaml
@@ -6,10 +6,25 @@ app_engine_apis: on
 
 handlers:
 - url: /favicon\.ico
-  static_files: favicon.ico
-  upload: favicon\.ico
+  static_files: static/favicon.ico
+  upload: static/favicon\.ico
   login: admin
   secure: always
+  mime_type: image/x-icon
+
+- url: /main\.js
+  static_files: static/main.js
+  upload: static/main\.js
+  login: admin
+  secure: always
+  mime_type: application/javascript
+
+- url: /main\.css
+  static_files: static/main.css
+  upload: static/main\.css
+  login: admin
+  secure: always
+  mime_type: text/css
 
 - url: /.*
   script: auto
