--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,9 @@ runtime: go123
 # https://cloud.google.com/appengine/docs/standard/reference/app-yaml?tab=go#runtime_and_app_elements
 app_engine_apis: on
 
+# https://cloud.google.com/appengine/docs/standard#instance_classes
+instance_class: B1
+
 # https://cloud.google.com/appengine/docs/standard/reference/app-yaml.md?tab=go#scaling_elements
 basic_scaling:
   max_instances: 1
